feat: add broker demo, fix playwright
